force-app/main/default/objects/Activity/fields/Account_Status_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Copy__c</fullName>
    <description>A call&apos;s related contact&apos;s account status at the created date</description>
    <label>Account Status Copy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>