force-app/main/default/objects/Activity/fields/Assigned_Role_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role_Start_Date__c</fullName>
    <formula>Owner:User.Role_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Role Start Date</label>
    <type>Date</type>
</CustomField>