force-app/main/default/objects/Activity/fields/Contact_Status_Copy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Copy__c</fullName>
    <description>Contact Status at the time of an activity (e.g., call or email)</description>
    <label>Contact Status Copy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>