force-app/main/default/objects/Activity/fields/First_Rev_Oppty_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Rev_Oppty_Creation_Date__c</fullName>
    <formula>Related_Contact__r.Account.First_Revenue_Oppty_Creation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Rev Oppty Creation Date</label>
    <type>DateTime</type>
</CustomField>