force-app/main/default/objects/Activity/fields/Is_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Email__c</fullName>
    <formula>IF(CONTAINS(Subject, &quot;Email&quot;), &quot;Email&quot;,
    IF(CONTAINS(Subject, &quot;[Gong In]&quot;), &quot;Gong In&quot;,
        IF(CONTAINS(Subject, &quot;[Gong Out]&quot;), &quot;Gong Out&quot;, &quot;Phone&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Email</label>
    <type>Text</type>
</CustomField>