force-app/main/default/objects/Activity/fields/Old_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Contact__c</fullName>
    <label>Old Account Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>