force-app/main/default/objects/Activity/fields/Open_Oppty_Rev_Copy__c.field-meta.xml
<CustomField>
    <fullName>Open_Oppty_Rev_Copy__c</fullName>
    <description>Expected revenue from open oppty on an account (workflow stamps expected revenue - account lifetime purchases)</description>
    <label>Open Oppty Rev Copy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>