force-app/main/default/objects/Activity/fields/Owner_Role_Copy__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role_Copy__c</fullName>
    <description>Stores the role of owner of the task at the time of creation of task.</description>
    <label>Owner Role Copy</label>
    <type>TextArea</type>
</CustomField>