force-app/main/default/objects/Activity/fields/ShowpadForSF__Showpad_Activity__c.field-meta.xml
<CustomField>
    <fullName>ShowpadForSF__Showpad_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showpad Activity</label>
    <referenceTo>ShowpadForSF__Showpad_Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>